@@ -1,3 +1,8 @@
+Mon Mar 19 19:15:15 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	* .savannah, ChangeLog, awkgram.y:
+	Sync with savannah gawk cvsps 53.
+
 Sun Mar 18 22:26:54 UTC 2007 Andrew J. Schorr <ajschorr@users.sourceforge.net>
 
 	* .savannah: New file to contain the number of last Savannah gawk-stable
